# aiida-declarative

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci_tests.yml
aiida_declarative/workchains/: declarative_chain.py
examples/: 1.yaml  4.yaml  5.yaml  6_1.yaml  6_2.yaml
tests/: conftest.py  test_simple_execution.py  test_units.py  tests.sh
tests/samples/: double_sum.yaml  qe_basic.yaml
